# samplerinfinite2

./: .gitignore  CMakeLists.txt  frequencies.cpp  frequencies.h  maincontent.ui  poweroftwospinbox.cpp  poweroftwospinbox.h  samplerinfinite.cpp  samplerinfinite.h  samplerinfinite.ui  searchablecombobox.cpp  searchablecombobox.h
backend/: AudioFileParse.cpp  FFTProcessor.cpp  SamplerInfinite.cpp
demucs/: demucsBuild.py
include/: AudioFileParse.h  FFTProcessor.h  SamplerInfinite.h
